--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Install Le Libido</title>
   <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="/le-libido-icon.png" />
   <meta name="theme-color" content="#950606" />
+  <link rel="icon" href="/le-libido-icon.png" />
   <style>
     :root {
       --red: #950606;
@@ -56,8 +56,7 @@
       padding: 20px;
       margin-top: 20px;
       text-align: left;
-      max-height: 300px;
-      overflow-y: auto;
+      white-space: pre-line;
     }
 
     .modal {
@@ -81,25 +80,32 @@
       max-width: 500px;
       margin: 100px auto;
       padding: 30px;
+      line-height: 1.7;
+      text-align: center;
     }
 
     .modal h2 {
       color: var(--gold);
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       margin-bottom: 16px;
     }
 
     .modal img {
-      width: 40px;
+      width: 36px;
       vertical-align: middle;
-      margin-right: 8px;
+      margin-bottom: 6px;
     }
 
     .close-modal {
       cursor: pointer;
       color: white;
       float: right;
-      font-size: 20px;
+      font-size: 22px;
+    }
+
+    ol {
+      padding-left: 1.2rem;
+      line-height: 2rem;
     }
   </style>
 </head>
@@ -109,13 +115,13 @@
   <button class="install-btn" id="installBtn">Click here to install app</button>
 
   <div class="how-it-works">
-    <h2 style="color: var(--gold);">How It Works:</h2>
+    <h2 style="color: var(--gold); text-align:center;">How It Works:</h2>
     <ol>
-      <li>Install app by adding to Home Screen, so you can date on the go.</li>
-      <li>Complete our hilariously sexy 10-questionnaire to discover people you’re compatible with.</li>
-      <li>Sign up for either verified mode or anonymous mode and complete your profile.</li>
-      <li>Check out who’s hot at each venue before visiting, or visit a venue like a bar, café, or restaurant to get checked in and see who’s checking you out.</li>
-      <li>Make your move by tapping “Approach” or only reveal your location to people you want to “Invite” and give permission to approach you.</li>
+      <li>Install app by adding to Home Screen, so you can date on the go.</li><br/>
+      <li>Complete our hilariously sexy 10-questionnaire to discover people you’re compatible with.</li><br/>
+      <li>Sign up for either verified mode or anonymous mode and complete your profile.</li><br/>
+      <li>Check out who’s hot at each venue before visiting, or visit a venue like a bar, café, or restaurant to get checked in and see who’s checking you out.</li><br/>
+      <li>Make your move by tapping “Approach” or only reveal your location to people you want to “Invite” and give permission to approach you.</li><br/>
       <li>Start flirting! Use our chat/group chat feature to set up your date IRL.</li>
     </ol>
   </div>
@@ -124,10 +130,10 @@
     <div class="modal-content">
       <span class="close-modal" onclick="document.getElementById('installModal').style.display='none'">&times;</span>
       <h2>Install App Now</h2>
-      <p>To enjoy the full experience, install <strong>Le Libido</strong> to your Home Screen.</p>
-      <p>If you're on <strong>iOS Safari</strong>:</p>
-      <p><img src="share-icon.png" alt="Share Icon" /> Tap the share icon and scroll down to “Add to Home Screen”.</p>
-      <p id="androidInstructions" style="display: none;"><strong>Android user?</strong> A browser prompt should appear—just tap "Install" when it does! If not, use the browser menu.</p>
+      <p>To enjoy the full experience, install <strong>Le Libido</strong><br>to your Home Screen.</p>
+      <p><strong>If you're on iOS Safari:</strong></p>
+      <p><img src="share-icon.png" alt="Share Icon" /><br>Tap the share icon<br>and scroll down to<br><strong>“Add to Home Screen”</strong>.</p>
+      <p id="androidInstructions" style="display:none;"><strong>On Android Chrome or Brave?</strong><br>Wait for the install prompt or open the browser menu (3 dots) and select “Install App”.</p>
     </div>
   </div>
 
@@ -138,13 +144,15 @@
 
     installBtn.addEventListener('click', () => {
       installModal.style.display = 'block';
-      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
+      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
       const isIOS = /iPad|iPhone|iPod/.test(userAgent) && !window.MSStream;
       const isSafari = /^((?!chrome|android).)*safari/i.test(userAgent);
       const isAndroid = /android/i.test(userAgent);
+      const isChrome = /Chrome/.test(userAgent) && /Google Inc/.test(navigator.vendor);
+      const isBrave = navigator.brave !== undefined;
 
-      if (isAndroid) {
+      if (isAndroid && (isChrome || isBrave)) {
         androidInstructions.style.display = 'block';
       }
     });
