--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -139,7 +139,7 @@
     <div class="modal-content">
       <span class="close-modal" onclick="document.getElementById('installModal').style.display='none'">&times;</span>
       <h2>Install App Now</h2>
-      <p>To enjoy the full experience,<br> install <strong>Le Libido</strong><br>to your Home Screen.</p>
+      <p>To enjoy the full experience,<br> install <strong>Le Libido</strong></br>to your Home Screen.</p>
 
       <p><strong>If you're on iOS Safari:</strong><br>
       Tap <img src="share-icon.png" alt="Share Icon" /> scroll down and click<br><strong>“Add to Home Screen”</strong>.</p>
