--- a/fallback.html
+++ b/fallback.html
@@ -6,7 +6,7 @@
   <title>Le Libido – App Not Supported</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" />
-  <link rel="icon" href="le-libido-icon.png" />
+  <link rel="icon" href="/le-libido-icon.png" />
   <meta name="theme-color" content="#064D95" />
 
   <style>
@@ -37,12 +37,13 @@
     h1 {
       font-size: 2rem;
       color: var(--gold);
+      margin-bottom: 16px;
     }
 
     p {
       font-size: 1rem;
       max-width: 600px;
-      margin: 0 auto 20px;
+      margin: 0 auto 16px;
       line-height: 1.6;
     }
 
@@ -69,23 +70,29 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    .tip img {
+      height: 18px;
+      vertical-align: middle;
+      margin: 0 4px;
+    }
   </style>
 </head>
 <body>
 
-  <img src="le-libido-icon.png" alt="Le Libido Icon" class="logo" />
+  <img src="/le-libido-icon.png" alt="Le Libido Icon" class="logo" />
 
   <h1>Looks like your browser doesn't support app installation</h1>
 
-  <p>For the best experience, open Le Libido in <strong>Safari on iPhone</strong> or <strong>Chrome on Android</strong> and add it to your home screen.</p>
+  <p>For the best experience, open <strong>Le Libido</strong> in <strong>Safari on iPhone</strong> or <strong>Chrome on Android</strong> and add it to your home screen.</p>
 
   <p>This lets you receive real-time notifications when you're being checked out and access the dating feed with one tap—just like a native app.</p>
 
-  <a href="https://lelibido.com/quiz-new.html" class="button">Continue in Browser</a>
+  <a href="/quiz-new.html" class="button">Continue in Browser</a>
 
   <div class="tip">
     <h2>📱 iPhone Tip</h2>
-    <p>Using Safari? Tap the <strong>Share</strong> icon <img src="share-icon.jpeg" alt="Share Icon" style="height: 18px; vertical-align: middle;"> at the bottom of your screen, then scroll down and tap <strong>"Add to Home Screen"</strong>.</p>
+    <p>If you're using Safari, tap the <strong>Share</strong> icon <img src="/share-icon.png" alt="Share Icon"> at the bottom of your screen, then scroll down and tap <strong>"Add to Home Screen"</strong>.</p>
   </div>
 
 </body>
