--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -50,22 +50,6 @@
       100% { transform: scale(1); box-shadow: 0 0 0px var(--gold); }
     }
 
-    .how-it-works {
-      background-color: var(--darkred);
-      border-radius: 12px;
-      padding: 20px;
-      margin-top: 20px;
-      text-align: left;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-
-    .how-it-works h2 {
-      color: var(--gold);
-      text-align: center;
-      margin-top: 0;
-    }
-
     .modal {
       display: none;
       position: fixed;
@@ -124,22 +108,11 @@
 
   <button class="install-btn" id="installBtn">Click here to install app</button>
 
-  <div class="how-it-works">
-    <h2>How It Works:</h2>
-
-    <p><b>Install app</b> by adding to Home Screen, so you can date on the go.</p>
-    <p><b>Complete our questionnaire</b> to discover people you’re compatible with.</p>
-    <p><b>Sign up</b> for either verified mode or anonymous mode and complete your profile.</p>
-    <p><b>Check out who’s hot</b> at each venue before visiting, or visit a venue like a bar, café, or restaurant to get checked in and see who’s checking you out.</p>
-    <p><b>Make your move</b> by tapping “Approach” or only reveal your location to people you want to “Invite” and give permission to approach you.</p>
-    <p><b>Start flirting!</b> Use our chat/group chat feature to set up your date IRL.</p>
-  </div>
-
   <div class="modal" id="installModal">
     <div class="modal-content">
       <span class="close-modal" onclick="document.getElementById('installModal').style.display='none'">&times;</span>
       <h2>Install App Now</h2>
-      <p>To enjoy the full experience,<br> install <strong>Le Libido</strong></br>to your Home Screen.</p>
+      <p>To enjoy the full experience, install <strong>Le Libido</strong><br>to your Home Screen.</p>
 
       <p><strong>If you're on iOS Safari:</strong><br>
       Tap <img src="share-icon.png" alt="Share Icon" /> scroll down and click<br><strong>“Add to Home Screen”</strong>.</p>
