--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -12,46 +12,43 @@
     :root {
       --red: #950606;
       --gold: #e1bf78;
-      --darkred: #7c0404;
     }
 
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
       background-color: var(--red);
       color: white;
+      font-family: 'Montserrat', sans-serif;
       display: flex;
       justify-content: center;
+      align-items: center;
       height: 100vh;
-      padding-top: 60px;
-      box-sizing: border-box;
     }
 
-    .center-box {
-      border: 8px solid var(--gold);
+    .frame {
+      border: 6px solid var(--gold);
       border-radius: 20px;
-      padding: 40px 20px;
+      padding: 40px 30px;
       text-align: center;
       background-color: var(--red);
     }
 
-    img.logo {
+    .logo {
       max-width: 120px;
-      display: block;
       margin: 0 auto 30px;
+      display: block;
     }
 
     .install-btn {
       background-color: var(--gold);
       color: var(--red);
-      padding: 16px 28px;
+      font-weight: bold;
       font-size: 1.2rem;
-      border: 4px solid var(--gold);
+      padding: 14px 28px;
+      border: none;
       border-radius: 12px;
       cursor: pointer;
       animation: pulse 1.8s infinite;
-      font-weight: bold;
-      display: inline-block;
     }
 
     @keyframes pulse {
@@ -114,8 +111,8 @@
   </style>
 </head>
 <body>
-  <div class="center-box">
-    <img src="golden-le-libido-logo.png" class="logo" alt="Le Libido Logo" />
+  <div class="frame">
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
     <button class="install-btn" id="installBtn">Click here to install app</button>
   </div>
 
