--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -17,12 +17,13 @@
     body {
       margin: 0;
       background-color: var(--red);
-      color: white;
       font-family: 'Montserrat', sans-serif;
+      color: white;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       height: 100vh;
+      padding-top: 12vh; /* shift content higher */
     }
 
     .frame {
