--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -3,158 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Install Le Libido</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#950606" />
-  <link rel="icon" href="/le-libido-icon.png" />
+  <title>Install Modal</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --red: #950606;
       --gold: #e1bf78;
+      --red: #950606;
     }
 
     body {
       margin: 0;
+      font-family: 'Montserrat', sans-serif;
       background-color: var(--red);
       color: white;
-      font-family: 'Montserrat', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
 
-    .frame {
-      border: 6px solid var(--gold);
-      border-radius: 20px;
-      padding: 40px 30px;
-      text-align: center;
-      background-color: var(--red);
-      transform: translateY(-40px); /* Raise frame 15px */
-    }
-
-    .logo {
-      max-width: 120px;
-      margin: 0 auto 30px;
-      display: block;
-    }
-
-    .install-btn {
-      background-color: var(--gold);
-      color: var(--red);
-      font-weight: bold;
-      font-size: 1.2rem;
-      padding: 14px 28px;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      animation: pulse 1.8s infinite;
-      transition: transform 0.1s ease;
-    }
-
-    .install-btn:active {
-      transform: scale(0.96); /* Tap feedback */
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 0px var(--gold); }
-      50% { transform: scale(1.05); box-shadow: 0 0 15px var(--gold); }
-      100% { transform: scale(1); box-shadow: 0 0 0px var(--gold); }
-    }
-
-    .modal {
-      display: none;
+    /* Modal wrapper with flexbox centering */
+    .modal-wrapper {
       position: fixed;
-      z-index: 9999;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.85);
-      color: white;
-      padding: 20px;
-      box-sizing: border-box;
+      height: 100vh;
+      width: 100vw;
+      background-color: rgba(0, 0, 0, 0.6); /* optional dark overlay */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
     }
 
-    .modal-content {
+    /* Modal content box */
+    .modal {
       background-color: var(--red);
-      border: 4px solid var(--gold);
-      border-radius: 16px;
-      max-width: 480px;
-      margin: 80px auto;
-      padding: 24px 20px;
-      line-height: 1.5;
+      border: 3px solid var(--gold);
+      border-radius: 20px;
+      padding: 24px;
+      width: 90%;
+      max-width: 360px;
       text-align: center;
+      color: var(--gold);
+      box-shadow: 0 0 15px rgba(225, 191, 120, 0.4);
+      position: relative;
     }
 
     .modal h2 {
+      margin-top: 0;
+      font-size: 1.5rem;
       color: var(--gold);
-      font-size: 1.6rem;
-      margin-bottom: 12px;
     }
 
-    .modal img {
-      width: 30px;
-      vertical-align: middle;
-      margin: 0 4px;
+    .modal p {
+      font-size: 1rem;
+      line-height: 1.4;
+      color: #fff;
     }
 
-    .close-modal {
+    .modal strong {
+      color: var(--gold);
+    }
+
+    .modal .close-btn {
+      position: absolute;
+      top: 12px;
+      right: 16px;
+      font-size: 1.2rem;
+      color: var(--gold);
       cursor: pointer;
-      color: white;
-      float: right;
-      font-size: 22px;
-    }
-
-    .android-note {
-      margin-top: 12px;
-    }
-
-    b {
-      color: var(--gold);
     }
   </style>
 </head>
 <body>
-  <div class="frame">
-    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-    <button class="install-btn" id="installBtn">Click here to install app</button>
-  </div>
 
-  <div class="modal" id="installModal">
-    <div class="modal-content">
-      <span class="close-modal" onclick="document.getElementById('installModal').style.display='none'">&times;</span>
+  <!-- Modal wrapper and content -->
+  <div class="modal-wrapper" id="installModal">
+    <div class="modal">
+      <span class="close-btn" onclick="document.getElementById('installModal').style.display='none'">&times;</span>
       <h2>Install App Now</h2>
-      <p>To enjoy the full experience,<br>install <strong>Le Libido</strong> to your Home Screen.</p>
-
-      <p><strong>If you're on iOS Safari:</strong><br>
-      Tap <img src="share-icon.png" alt="Share Icon" /> scroll down and click<br><strong>“Add to Home Screen”</strong>.</p>
-
-      <p id="androidInstructions" class="android-note" style="display:none;">
-        <strong>On Android Chrome or Brave:</strong><br>
-        Wait for the install banner or tap the menu (⋮) and select “Install App”.
+      <p>
+        To enjoy the full experience,<br />
+        install <strong>Le Libido</strong> to your Home Screen.
+      </p>
+      <p>
+        <strong>If you're on iOS Safari:</strong><br />
+        Tap <img src="https://img.icons8.com/ios-filled/20/ffffff/share--v1.png" style="vertical-align:middle; margin: 0 4px;" /> scroll down and click<br />
+        <strong>“Add to Home Screen”</strong>.
       </p>
     </div>
   </div>
 
-  <script>
-    const installBtn = document.getElementById('installBtn');
-    const installModal = document.getElementById('installModal');
-    const androidInstructions = document.getElementById('androidInstructions');
-
-    installBtn.addEventListener('click', () => {
-      installModal.style.display = 'block';
-
-      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-      const isAndroid = /android/i.test(userAgent);
-      const isChrome = /Chrome/.test(userAgent) && /Google Inc/.test(navigator.vendor);
-      const isBrave = navigator.brave !== undefined;
-
-      if (isAndroid && (isChrome || isBrave)) {
-        androidInstructions.style.display = 'block';
-      }
-    });
-  </script>
 </body>
 </html>
